--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
           version: "latest"
 
       - name: Set up Python
-        run: uv python install
+        run: uv python install 3.11
 
       - name: Install dependencies
         run: uv sync --dev
@@ -41,7 +41,7 @@ jobs:
           version: "latest"
 
       - name: Set up Python
-        run: uv python install
+        run: uv python install 3.11
 
       - name: Check if uv.lock is in sync with pyproject.toml
         run: |
