--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,53 @@
+# PostgreSQL data files
+postgres/data/
+postgres/data/*
+postgres/data/**/*
+
+# Redis data files
+redis/data/
+redis/data/*
+*.rdb
+*.aof
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.staging
+.env.development
+.env.*.local
+
+# Firebase service account keys (보안상 중요)
+firebase-key.json
+firebase-service-account-key.json
+*-firebase-adminsdk-*.json
+what2eat-*-firebase-adminsdk-*.json
+
+# Logs
+*.log
+logs/
+log/
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
