--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -10,9 +10,12 @@ RUN apt-get update && apt-get install -y \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Python 의존성 설치
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# uv 설치
+RUN pip install uv
+
+# Python 의존성 설치 (uv 사용)
+COPY pyproject.toml .
+RUN uv pip install --system -e .
 
 # 애플리케이션 코드 복사
 COPY . .
@@ -30,7 +33,7 @@ HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
 # 서버 실행
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
+CMD ["sh", "-c", "uvicorn app.main:app --host 0.0.0.0 --port 8000 --workers $WORKERS"]
 
 
 
