--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,15 @@ dependencies = [
     "numpy>=1.24.0",
 ]
 
-[tool.uv]
-dev-dependencies = [
+[dependency-groups]
+dev = [
     "pytest==8.3.3",
     "pytest-cov==6.0.0",
     "ruff==0.9.9",
     "pre-commit>=4.0,<5.0",
+]
+
+[tool.uv.workspace]
+members = [
+    "fastapi",
 ]
