feat: security improvements (#9)

--- a/env.example
+++ b/env.example
@@ -7,13 +7,14 @@ DATABASE_URL=postgresql://yamyam:yamyam_pass@localhost:5432/yamyamdb
 # Redis 설정
 REDIS_URL=redis://localhost:6379
 
-# FAISS 서버 설정
+# FAISS 서버 설정 (선택사항)
 FAISS_SERVER_URL=http://localhost:7000
 
 # JWT 설정
-SECRET_KEY=your-secret-key-here-change-this-in-production
-ALGORITHM=HS256
+JWT_SECRET_KEY=your-secret-key-here-change-this-in-production
+JWT_ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
+REFRESH_TOKEN_EXPIRE_DAYS=7
 
 # 환경 설정
 ENVIRONMENT=development
@@ -22,12 +23,14 @@ LOG_LEVEL=INFO
 
 # Firebase 설정 (파일 경로 방식 권장)
 GOOGLE_APPLICATION_CREDENTIALS=./firebase-service-account-key.json
+# 또는 환경 변수로 JSON 전달 (대안)
+# FIREBASE_KEY=<firebase-service-account-json-string>
 
-# CORS 설정
+# CORS 설정 (JSON 배열 형식 또는 쉼표로 구분)
+# 개발 환경
 ALLOWED_ORIGINS=["http://localhost:8501", "http://localhost:3000", "http://127.0.0.1:8501"]
-
-# API URL
-API_BASE_URL=http://localhost:8000
+# 프로덕션 환경 예시:
+# ALLOWED_ORIGINS=["https://what2eat.streamlit.app", "https://your-domain.com"]
 
 # Docker Hub 배포용 환경 변수 (선택사항)
 DOCKERHUB_USERNAME=your-dockerhub-username
