--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,14 +9,28 @@ services:
     ports:
       - "8000:8000"
     environment:
+      # 데이터베이스 설정
       DATABASE_URL: postgresql://yamyam:yamyam_pass@postgres:5432/yamyamdb
       REDIS_URL: redis://redis:6379
-      SECRET_KEY: your-secret-key-here
-      ALGORITHM: HS256
+      
+      # JWT 설정
+      JWT_SECRET_KEY: your-secret-key-here-change-in-production
+      JWT_ALGORITHM: HS256
       ACCESS_TOKEN_EXPIRE_MINUTES: 30
+      REFRESH_TOKEN_EXPIRE_DAYS: 7
+      
+      # 환경 설정
       ENVIRONMENT: development
       DEBUG: True
+      LOG_LEVEL: INFO
+      
+      # CORS 설정
+      ALLOWED_ORIGINS: '["http://localhost:8501", "http://localhost:3000", "http://localhost"]'
+      
+      # Firebase 설정
       GOOGLE_APPLICATION_CREDENTIALS: /app/firebase-key.json
+      
+      # 서버 설정
       WORKERS: ${WORKERS:-1}
     depends_on:
       postgres:
