--- a/nginx/conf/default.prod.conf
+++ b/nginx/conf/default.prod.conf
@@ -5,7 +5,7 @@
 limit_req_zone $binary_remote_addr zone=api_limit:10m rate=10r/s;
 
 upstream fastapi_backend {
-    server fastapi:8000;
+    server backend:8000;
 }
 
 # HTTP to HTTPS redirect
