--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -5,43 +5,10 @@ upstream fastapi_backend {
     server backend:8000;
 }
 
-# HTTP to HTTPS redirect
+# HTTP 서버 설정
 server {
     listen 80;
     server_name _;
-
-    # Let's Encrypt 인증을 위한 경로
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    # HTTP 요청을 HTTPS로 리다이렉트
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# HTTPS 서버 설정
-server {
-    listen 443 ssl http2;
-    server_name _;
-
-    # SSL 인증서 설정 (Let's Encrypt 사용 시 자동 생성)
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-
-    # SSL 보안 강화 설정
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
-
-    # 보안 헤더
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
 
     # CORS 설정 - Streamlit Cloud 프로덕션 + 로컬 개발 환경 허용
     set $cors_origin "";
@@ -100,7 +67,99 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Let's Encrypt 인증을 위한 경로 (향후 SSL 인증서 추가 시 사용)
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     # 로그 설정
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 }
+
+# HTTPS 서버 설정 (SSL 인증서가 준비되면 활성화)
+# SSL 인증서를 /etc/nginx/ssl/ 디렉토리에 배치한 후 주석을 해제하세요
+#
+# server {
+#     listen 443 ssl;
+#     http2 on;
+#     server_name _;
+#
+#     # SSL 인증서 설정 (Let's Encrypt 사용 시 자동 생성)
+#     ssl_certificate /etc/nginx/ssl/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+#
+#     # SSL 보안 강화 설정
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers HIGH:!aNULL:!MD5;
+#     ssl_prefer_server_ciphers on;
+#     ssl_session_cache shared:SSL:10m;
+#     ssl_session_timeout 10m;
+#
+#     # 보안 헤더
+#     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+#     add_header X-Frame-Options "SAMEORIGIN" always;
+#     add_header X-Content-Type-Options "nosniff" always;
+#     add_header X-XSS-Protection "1; mode=block" always;
+#
+#     # CORS 설정 - Streamlit Cloud 프로덕션 + 로컬 개발 환경 허용
+#     set $cors_origin "";
+#     # 프로덕션: Streamlit Cloud
+#     if ($http_origin ~* "^https://what2eat\.streamlit\.app$") {
+#         set $cors_origin $http_origin;
+#     }
+#     # 로컬 개발 환경: localhost, 127.0.0.1
+#     if ($http_origin ~* "^http://(localhost|127\.0\.0\.1)(:[0-9]+)?$") {
+#         set $cors_origin $http_origin;
+#     }
+#
+#     add_header Access-Control-Allow-Origin $cors_origin always;
+#     add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+#     add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+#     add_header Access-Control-Allow-Credentials "true" always;
+#
+#     # Request Body 크기 제한
+#     client_max_body_size 10M;
+#
+#     # FastAPI 백엔드 API
+#     location / {
+#         # rate limiting 적용
+#         limit_req zone=api_limit burst=20 nodelay;
+#
+#         # OPTIONS 요청 처리 (CORS preflight)
+#         if ($request_method = 'OPTIONS') {
+#             add_header Access-Control-Allow-Origin $cors_origin always;
+#             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+#             add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+#             add_header Access-Control-Allow-Credentials "true" always;
+#             add_header Access-Control-Max-Age "86400" always;
+#             add_header Content-Type "text/plain charset=UTF-8";
+#             add_header Content-Length 0;
+#             return 204;
+#         }
+#
+#         proxy_pass http://fastapi_backend;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#
+#         # 타임아웃 설정
+#         proxy_connect_timeout 60s;
+#         proxy_send_timeout 60s;
+#         proxy_read_timeout 60s;
+#     }
+#
+#     # 헬스체크 엔드포인트 (rate limiting 제외)
+#     location /health {
+#         proxy_pass http://fastapi_backend/health;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+#
+#     # 로그 설정
+#     access_log /var/log/nginx/access.log;
+#     error_log /var/log/nginx/error.log;
+# }
