--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -7,7 +7,7 @@ upstream fastapi_backend {
 
 # HTTP 서버 설정
 server {
-    listen 80;
+    listen 8808;
     server_name _;
 
     # CORS 설정 - Streamlit Cloud 프로덕션 + 로컬 개발 환경 허용
@@ -47,24 +47,28 @@ server {
         }
 
         proxy_pass http://fastapi_backend;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
 
-        # 타임아웃 설정
+        # 타임아웃 설정 (파일 업로드 작업을 위해 충분히 큰 값 설정)
         proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
     }
 
     # 헬스체크 엔드포인트 (rate limiting 제외)
     location /health {
         proxy_pass http://fastapi_backend/health;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
     }
 
     # Let's Encrypt 인증을 위한 경로 (향후 SSL 인증서 추가 시 사용)
