--- a/nginx/conf/default.prod.conf
+++ b/nginx/conf/default.prod.conf
@@ -10,7 +10,7 @@ upstream fastapi_backend {
 
 # HTTP to HTTPS redirect
 server {
-    listen 80;
+    listen 8808;
     server_name _;
 
     # Let's Encrypt 인증을 위한 경로
@@ -93,10 +93,10 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
 
-        # 타임아웃 설정
+        # 타임아웃 설정 (파일 업로드 작업을 위해 충분히 큰 값 설정)
         proxy_connect_timeout 60s;
-        proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_send_timeout 600s;
+        proxy_read_timeout 600s;
 
         # 버퍼 설정
         proxy_buffering on;
