--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,3 +34,69 @@ dev = [
 members = [
     "backend",
 ]
+
+[tool.ruff]
+# Refer https://github.com/astral-sh/ruff?tab=readme-ov-file#configuration
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
+]
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+# Assume Python 3.11
+target-version = "py311"
+
+# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
+lint.select = ["E4", "E7", "E9", "F", "I", "UP006"]
+lint.ignore = ["E722", "F403", "F405", "E501"]
+
+# Allow fix for all enabled rules (when `--fix`) is provided.
+lint.fixable = ["ALL"]
+lint.unfixable = []
+
+# Allow unused variables when underscore-prefixed.
+lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+# Like Black, use double quotes for strings.
+format.quote-style = "double"
+
+# Like Black, indent with spaces, rather than tabs.
+format.indent-style = "space"
+
+# Like Black, respect magic trailing commas.
+format.skip-magic-trailing-comma = false
+
+# Like Black, automatically detect the appropriate line ending.
+format.line-ending = "auto"
+
+# isort 설정
+[tool.ruff.lint.isort]
+known-first-party = ["app"]
+section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
