--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -26,8 +26,43 @@ server {
     add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
     add_header Access-Control-Allow-Credentials "true" always;
 
-    # Request Body 크기 제한
-    client_max_body_size 10M;
+    # Request Body 크기 제한 (파일 업로드를 위해 증가)
+    client_max_body_size 2000M;
+
+    # 파일 업로드 엔드포인트 (더 큰 크기 허용)
+    location ~ ^/api/v1/upload/(kakao/)?(diners|reviewers|reviews) {
+        # rate limiting 적용
+        limit_req zone=api_limit burst=20 nodelay;
+
+        # OPTIONS 요청 처리 (CORS preflight)
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin $cors_origin always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
+            add_header Access-Control-Allow-Credentials "true" always;
+            add_header Access-Control-Max-Age "86400" always;
+            add_header Content-Type "text/plain charset=UTF-8";
+            add_header Content-Length 0;
+            return 204;
+        }
+
+        proxy_pass http://fastapi_backend;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection "";
+
+        # 파일 업로드를 위한 타임아웃 설정 (더 긴 시간 허용)
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 1800s;
+        proxy_read_timeout 1800s;
+
+        # 버퍼 설정 (대용량 파일 업로드)
+        proxy_buffering off;
+        proxy_request_buffering off;
+    }
 
     # FastAPI 백엔드 API
     location / {
@@ -56,8 +91,8 @@ server {
 
         # 타임아웃 설정 (파일 업로드 작업을 위해 충분히 큰 값 설정)
         proxy_connect_timeout 60s;
-        proxy_send_timeout 600s;
-        proxy_read_timeout 600s;
+        proxy_send_timeout 1200s;
+        proxy_read_timeout 1200s;
     }
 
     # 헬스체크 엔드포인트 (rate limiting 제외)
@@ -122,8 +157,8 @@ server {
 #     add_header Access-Control-Allow-Headers "Authorization, Content-Type" always;
 #     add_header Access-Control-Allow-Credentials "true" always;
 #
-#     # Request Body 크기 제한
-#     client_max_body_size 10M;
+#     # Request Body 크기 제한 (파일 업로드를 위해 증가)
+#     client_max_body_size 100M;
 #
 #     # FastAPI 백엔드 API
 #     location / {
