fix: Fetch similar-restaurant JSON data from remote server via SSH instead of local file (#36)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,6 +8,8 @@ RUN apt-get update && apt-get install -y \
     g++ \
     libpq-dev \
     curl \
+    sshpass \
+    openssh-client \
     && rm -rf /var/lib/apt/lists/*
 
 # uv 설치
