--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,20 +14,20 @@ on:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      
+
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
-      
+
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
+
     - name: Set tags
       id: tags
       run: |
@@ -45,14 +45,14 @@ jobs:
         cat $GITHUB_OUTPUT.tags >> $GITHUB_OUTPUT
         echo "EOF" >> $GITHUB_OUTPUT
       shell: bash
-      
+
     - name: Extract metadata
       id: meta
       uses: docker/metadata-action@v5
       with:
         images: ${{ secrets.DOCKERHUB_USERNAME }}/yamyam-ops
         tags: ${{ steps.tags.outputs.tags }}
-          
+
     - name: Build and push Docker image
       id: build
       uses: docker/build-push-action@v5
@@ -64,6 +64,8 @@ jobs:
         labels: ${{ steps.meta.outputs.labels }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
-        
+        build-args: |
+          GITHUB_TOKEN=${{ secrets.ORG_GITHUB_TOKEN }}
+
     - name: Image digest
       run: echo ${{ steps.build.outputs.digest }}
