--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,9 +16,14 @@ dependencies = [
     "redis==5.0.1",
     "python-jose[cryptography]==3.3.0",
     "passlib[bcrypt]==1.7.4",
-    "python-dotenv==1.0.0",
+    "python-dotenv>=1.0.0",
     "pandas==2.1.3",
     "firebase-admin==6.4.0",
     "python-ulid==3.1.0",
     "faiss-cpu==1.7.4",
+    "yamyam-lab @ git+https://github.com/lunch-corp/yamyam-lab.git@v1.0.6",
 ]
+
+
+[tool.uv.extra-build-dependencies]
+kiwipiepy = ["numpy"]
