--- a/env.example
+++ b/env.example
@@ -2,10 +2,10 @@
 # 이 파일을 복사하여 .env 파일을 생성하고 실제 값으로 수정하세요.
 
 # 데이터베이스 설정
-DATABASE_URL=postgresql://yamyam:yamyam_pass@localhost:5432/yamyamdb
+DATABASE_URL=postgresql://yamyam:yamyam_pass@postgres:5432/yamyamdb
 
 # Redis 설정
-REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://redis:6379
 
 # FAISS 서버 설정 (선택사항)
 FAISS_SERVER_URL=http://localhost:7000
@@ -41,8 +41,5 @@ POSTGRES_USER=yamyam
 POSTGRES_PASSWORD=yamyam_pass
 POSTGRES_DB=yamyamdb
 
-
-
-
-
-
+# Github token
+GITHUB_TOKEN={GITHUB_TOKEN}
