--- a/nginx/conf/default.conf
+++ b/nginx/conf/default.conf
@@ -30,7 +30,7 @@ server {
     client_max_body_size 2000M;
 
     # 파일 업로드 엔드포인트 (더 큰 크기 허용)
-    location ~ ^/api/v1/upload/(kakao/)?(diners|reviewers|reviews) {
+    location ~ ^/upload/(kakao/)?(diners|reviewers|reviews) {
         # rate limiting 적용
         limit_req zone=api_limit burst=20 nodelay;
 
