--- a/nginx/conf/default.prod.conf
+++ b/nginx/conf/default.prod.conf
@@ -71,7 +71,7 @@ server {
     client_max_body_size 2000M;
 
     # 파일 업로드 엔드포인트 (더 큰 크기 허용)
-    location ~ ^/api/v1/upload/(kakao/)?(diners|reviewers|reviews) {
+    location ~ ^/upload/(kakao/)?(diners|reviewers|reviews) {
         # rate limiting 적용
         limit_req zone=api_limit burst=20 nodelay;
 
@@ -149,7 +149,7 @@ server {
         # 특정 IP만 허용하려면 주석 해제
         # allow 1.2.3.4;
         # deny all;
-        
+
         proxy_pass http://fastapi_backend/docs;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -161,6 +161,3 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 }
-
-
-
