--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       REMOTE_JSON_USER: ${REMOTE_JSON_USER}
       REMOTE_JSON_PASS: ${REMOTE_JSON_PASS}
       REMOTE_JSON_PATH: ${REMOTE_JSON_PATH}
+      REMOTE_N2V_WEIGHT_PATH: ${REMOTE_N2V_WEIGHT_PATH}
+      REMOTE_N2V_UTIL_PATH: ${REMOTE_N2V_UTIL_PATH}
 
       # 서버 설정
       WORKERS: ${WORKERS:-1}
