--- a/env.example
+++ b/env.example
@@ -43,3 +43,13 @@ POSTGRES_DB=yamyamdb
 
 # Github token
 GITHUB_TOKEN={GITHUB_TOKEN}
+
+
+# JSON 서버 접속 정보
+REMOTE_JSON_HOST={REMOTE_JSON_HOST}
+REMOTE_JSON_PORT={REMOTE_JSON_PORT}
+REMOTE_JSON_USER={REMOTE_JSON_USER}
+REMOTE_JSON_PASS={REMOTE_JSON_PASS}
+REMOTE_JSON_PATH={REMOTE_JSON_PATH}
+REMOTE_N2V_WEIGHT_PATH={REMOTE_N2V_WEIGHT_PATH}
+REMOTE_N2V_UTIL_PATH={REMOTE_N2V_UTIL_PATH}
