--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "firebase-admin==6.4.0",
     "python-ulid==3.1.0",
     "faiss-cpu==1.7.4",
+    "paramiko==3.4.0",
     "yamyam-lab @ git+https://github.com/lunch-corp/yamyam-lab.git@v1.0.6",
 ]
 
